# ISO15118_4_TestEnv

./: .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Readme.md  ac-aging.service  dc-aging.service  run.sh  run_ac_aging.sh  run_dc_aging.sh  testcase.xlsx  worker.py
Codecs/: CMakeLists.txt  readme.md
Codecs/include/: V2gALMsg.h  V2gAppHandMessage.h  V2gCodecs.h  V2gDataPrint.h  V2gExiMessage.h  V2gSdpMessage.h  V2gSdpResMessage.h  V2gTpMessage.h
Codecs/include/messages/: AuthorizationReq.h  AuthorizationRes.h  CableCheckReq.h  CableCheckRes.h  CertificateInstallationReq.h  CertificateInstallationRes.h  CertificateUpdateReq.h  CertificateUpdateRes.h  ChargeParameterDiscoveryReq.h  ChargeParameterDiscoveryRes.h  ChargingStatusReq.h  ChargingStatusRes.h  CurrentDemandReq.h  CurrentDemandRes.h  MeterReceiptReq.h  MeterReceiptRes.h  PaymentDetailsReq.h  PaymentDetailsRes.h  PowerDeliveryReq.h  PowerDeliveryRes.h  PreChargeReq.h  PreChargeRes.h  ServiceDetailsReq.h  ServiceDetailsRes.h  ServiceDiscoveryReq.h  ServiceDiscoveryRes.h  ServicePaymentSelectionReq.h  ServicePaymentSelectionRes.h  SessionSetupReq.h  SessionSetupRes.h  SessionStopReq.h  SessionStopRes.h  SupportedAppProtocolReq.h  SupportedAppProtocolRes.h  WeldingDetectionReq.h  WeldingDetectionRes.h
Codecs/src/: V2gAppHandMessage.cpp  V2gDataPrint.cpp  V2gExiMessage.cpp  V2gSdpMessage.cpp  V2gSdpResMessage.cpp  V2gTpMessage.cpp
Codecs/src/messages/: AuthorizationReq.cpp  AuthorizationRes.cpp  CableCheckReq.cpp  CableCheckRes.cpp  CertificateInstallationReq.cpp  CertificateInstallationRes.cpp  CertificateUpdateReq.cpp  CertificateUpdateRes.cpp  ChargeParameterDiscoveryReq.cpp  ChargeParameterDiscoveryRes.cpp  ChargingStatusReq.cpp  ChargingStatusRes.cpp  CurrentDemandReq.cpp  CurrentDemandRes.cpp  MeterReceiptReq.cpp  MeterReceiptRes.cpp  PaymentDetailsReq.cpp  PaymentDetailsRes.cpp  PowerDeliveryReq.cpp  PowerDeliveryRes.cpp  PreChargeReq.cpp  PreChargeRes.cpp  ServiceDetailsReq.cpp  ServiceDetailsRes.cpp  ServiceDiscoveryReq.cpp  ServiceDiscoveryRes.cpp  ServicePaymentSelectionReq.cpp  ServicePaymentSelectionRes.cpp  SessionSetupReq.cpp  SessionSetupRes.cpp  SessionStopReq.cpp  SessionStopRes.cpp  SupportedAppProtocolReq.cpp  SupportedAppProtocolRes.cpp  WeldingDetectionReq.cpp  WeldingDetectionRes.cpp
PlatformInterface/: CMakeLists.txt  Readme.md
PlatformInterface/include/: PAInterface.h
PlatformInterface/src/: PAInterface.cpp
SUTInterface/IEC61851If/: CMakeLists.txt  readme.md
SUTInterface/IEC61851If/include/: SeccBasicSignaling.h  frame.h  frame_com.h  frame_com_service.h  serial0.h  sys_tick.h  ticker.h
SUTInterface/IEC61851If/src/: SeccBasicSignaling.cpp  frame.c  frame_com.c  frame_com_service.c  serial0.c  sys_tick.c  ticker.c
SUTInterface/ISO15118If/SLAC/: CMakeLists.txt  note.md  pev.ini
TestCase/: CMakeLists.txt  readme.md
TestCase/include/: V2GAppSECCAbnormal.h  V2GAppSECCAuthorization.h  V2GAppSECCCableCheck.h  V2GAppSECCCertificateInstallation.h  V2GAppSECCCertificateUpdate.h  V2GAppSECCChargeParameterDiscovery.h  V2GAppSECCChargingStatus.h  V2GAppSECCCurrentDemand.h  V2GAppSECCMeteringReceipt.h  V2GAppSECCPaymentDetails.h  V2GAppSECCPaymentServiceSelection.h  V2GAppSECCPowerDelivery.h  V2GAppSECCPreCharge.h  V2GAppSECCServiceDetail.h  V2GAppSECCServiceDiscovery.h  V2GAppSECCSessionSetup.h  V2GAppSECCSessionStop.h  V2GAppSECCSupportedAppProtocol.h  V2GAppSECCWeldingDetection.h  V2GSDP.h  V2GTPSecc.h  V2GTestcase.h
TestCase/src/: V2GAppSECCAbnormal.cpp  V2GAppSECCAuthorization.cpp  V2GAppSECCCableCheck.cpp  V2GAppSECCCertificateInstallation.cpp  V2GAppSECCCertificateUpdate.cpp  V2GAppSECCChargeParameterDiscovery.cpp  V2GAppSECCChargingStatus.cpp  V2GAppSECCCurrentDemand.cpp  V2GAppSECCMeteringReceipt.cpp  V2GAppSECCPaymentDetails.cpp  V2GAppSECCPaymentServiceSelection.cpp  V2GAppSECCPowerDelivery.cpp  V2GAppSECCPreCharge.cpp  V2GAppSECCServiceDetail.cpp  V2GAppSECCServiceDiscovery.cpp  V2GAppSECCSessionSetup.cpp  V2GAppSECCSessionStop.cpp  V2GAppSECCSupportedAppProtocol.cpp  V2GAppSECCWeldingDetection.cpp  V2GSDP.cpp  V2GTPSecc.cpp
TestExecution/CmnFunc/: CMakeLists.txt  readme.md
TestExecution/CmnFunc/include/: TB_SECC_CommonBehavior.h
TestExecution/CmnFunc/src/: TB_SECC_CommonBehavior.cpp
TestExecution/Components/: CMakeLists.txt  readme.md
TestExecution/Components/include/: AsyncQueue.h  Components.h  MainTestComponent.h  OperationQueue.h  ParallelTestComponent.h  PortType.h  SystemComponent.h
TestExecution/Components/src/: MainTestComponent.cpp  ParallelTestComponent.cpp  PortType.cpp  SystemComponent.cpp
TestExecution/ConfigurationFunc/: CMakeLists.txt  readme.md
TestExecution/ConfigurationFunc/include/: Common_Cfg.h
TestExecution/ConfigurationFunc/src/: Common_Cfg.cpp
TestExecution/LibFunc/: CMakeLists.txt
TestExecution/LibFunc/include/: CommonLib.h
TestExecution/LibFunc/src/: CommonLib.cpp
TestExecution/PostConditionFunc/: CMakeLists.txt  readme.md
TestExecution/PostConditionFunc/include/: PostConditions_SECC.h
TestExecution/PostConditionFunc/src/: PostConditions_SECC.cpp
TestExecution/PreConditionFunc/: CMakeLists.txt  readme.md
TestExecution/PreConditionFunc/include/: PreConditions_SECC.h
TestExecution/PreConditionFunc/src/: PreConditions_SECC.cpp
TestExecution/TestBehaviorFunc/: CMakeLists.txt  readme.md
TestExecution/TestBehaviorFunc/include/: TB_SECC_Authorization.h  TB_SECC_CableCheck.h  TB_SECC_CertificateInstallation.h  TB_SECC_CertificateUpdate.h  TB_SECC_ChargeParameterDiscovery.h  TB_SECC_ChargingStatus.h  TB_SECC_CurrentDemand.h  TB_SECC_MeteringReceipt.h  TB_SECC_Msg.h  TB_SECC_PaymentDetails.h  TB_SECC_PaymentServiceSelection.h  (+10 more)
TestSuite/: CMakeLists.txt  readme.md
TestSuite/include/: runTC.h
TestSuite/src/: AC_SECC_Charging_Control.cpp  CpState.cpp  DC_SECC_Charging_Control.cpp  bc_hlc.cpp  parseV2G.cpp  runTC.cpp  sampleMsgDump.sample  sampleMsgDump2.sample  sample_tcp.sample  setRelay.cpp  slacCheck.cpp  tcpadapter.sample  udpCheck.sample
modules/openv2g/: CMakeLists.txt
(+257 files in other folders)
